# ginjoly

./: .gitignore  LICENSE  README.md
connector/bridge/: main.py  pipeline_bridge.py  requirements.txt
connector/bridge/agent/: meet_bot.py
connector/bridge/static/: mic_inject.js
connector/web/: package-lock.json
connector/web/app/: globals.css  page.tsx
frontend/app/: layout.tsx  page.tsx
meet_backend/: .env.example  config.py  main.py  pipeline_bridge.py
meet_backend/agent/: llm.py  meet_bot.py  stt.py  tts.py
meet_backend/static/: audio_worklet.js
server/: .env.example  Dockerfile  bot.py  pcc-deploy.toml  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  demo.py  flow.py  llm_factory.py  stt_factory.py  tts_factory.py
server/app/extract/: __init__.py  brain.py  context.py  schema.py
server/app/extraction/: __init__.py  batch.py  memory.py  obsidian.py  rolling.py  schema.py
server/app/graph/: __init__.py  schema.py  vault.py
server/app/interview/: __init__.py  anchors.py  flow.py  session.py
server/app/interview/contexts/: __init__.py  hackathon.py  schema.py
server/app/interview/scorecard/: __init__.py  cekura.py  schema.py  writer.py
server/app/interview/verify/: __init__.py  brain.py  corroboration.py  schema.py  tool.py  tools_github.py  tools_scrapingdog.py
server/app/meeting/: __init__.py  brain.py  gate.py  pipeline.py  session.py
server/app/meetings/: __init__.py  schema.py
server/tests/: test_batch_tasks.py  test_obsidian_memory.py  test_rolling_extraction.py
