[project]
name = "ginjoly"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.87",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pipecat-ai-flows>=1.1.1",
    "pipecat-ai[anthropic,cartesia,daily,deepgram,openai,runner,silero,webrtc,websocket]",
    "pipecatcloud",
    "playwright>=1.60.0",
    "pydantic-settings>=2.14.1",
    "supermemory>=3.43.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
