[project]
name = "carleton"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "cekura[pipecat]>=1.2.0",
    "claude-agent-sdk>=0.2.87",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pipecat-ai-flows>=1.1.1",
    "pipecat-ai[anthropic,cartesia,daily,deepgram,gradium,openai,runner,silero,webrtc,websocket]",
    "pipecatcloud",
    "playwright>=1.60.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
